--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "axios": "^0.25.0",
     "next": "^12.0.8",
+    "next-redux-wrapper": "^7.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.10",
     "@types/react": "^17.0.38",
+    "@types/react-redux": "^7.1.22",
     "@types/styled-components": "^5.1.20",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.0",
     "babel-plugin-inline-react-svg": "^1.1.1",
     "eslint": "^8.7.0",
